--- a/project.html
+++ b/project.html
@@ -16,8 +16,9 @@
 
     /* 헤드라인 */
     .paw-head{background:#fff;border:1px solid var(--line);border-radius:14px;
-      padding:40px 20px;margin:40px 0;text-align:center}
-    .paw-head .big-title{font-size:2.4rem;font-weight:900;color:var(--ink)}
+      padding:28px 20px;margin:40px 0;text-align:center}
+    .paw-head .big-title{font-size:2.2rem;font-weight:900;color:var(--ink)}
+    .paw-head .meta-date{margin-top:6px;font-size:.9rem;color:#777}
 
     /* 레이아웃 */
     .paw-grid{display:grid;gap:20px}
@@ -62,24 +63,33 @@
     .btn-share:hover{background:#555}
 
     /* 본문 카드 */
-    .section-card{background:#fff;border-radius:16px;padding:28px;margin-top:22px;
+    .section-card{background:#fff;border-radius:16px;padding:24px;margin-top:22px;
       box-shadow:0 4px 10px rgba(0,0,0,0.05)}
-    .section-card h2{font-size:1.3rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
-    .section-card p{font-size:1.05rem;line-height:1.7;color:var(--ink)}
+    .section-card h2{font-size:1.2rem;font-weight:800;margin-bottom:14px;color:var(--accent)}
+    .section-card p{font-size:1.02rem;line-height:1.7;color:var(--ink)}
 
     /* ===== 후원 계좌 모달 ===== */
     .paw-modal{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.45);z-index:9999}
     .paw-modal[hidden]{display:none}
-    .paw-dialog{position:relative;background:#fff;border-radius:16px;max-width:520px;width:92%;padding:24px 20px;box-shadow:0 10px 40px rgba(0,0,0,.2)}
-    .paw-dialog h3{margin:0 0 12px;font-size:20px;font-weight:800}
+    .paw-dialog{position:relative;background:#fff;border-radius:16px;max-width:520px;width:92%;padding:24px 20px;box-shadow:0 10px 40px rgba(0,0,0,.2);
+      font-family:'SUIT Variable','Pretendard',system-ui,sans-serif}
+    .paw-dialog h3{margin:0 0 12px;font-size:20px;font-weight:800;color:var(--accent)}
     .paw-acc{display:flex;gap:8px;align-items:center;justify-content:space-between;background:#f5f5f5;border-radius:12px;padding:12px}
-    .paw-acc code{font-size:16px;font-weight:800;word-break:keep-all}
+    .paw-acc code{font-size:16px;font-weight:800;word-break:keep-all;color:var(--accent)}
     .paw-copy{border:0;border-radius:10px;padding:8px 12px;cursor:pointer}
     .paw-close{border:0;background:transparent;font-size:28px;line-height:1;cursor:pointer;position:absolute;top:8px;right:12px}
     .paw-donor-msg{margin:12px 2px 0;font-size:14px;color:#333}
     .paw-hint{margin:4px 2px 0;font-size:12px;color:#666}
     .paw-toast{position:absolute;bottom:12px;left:50%;transform:translateX(-50%);background:#111;color:#fff;border-radius:999px;padding:6px 12px;font-size:12px}
     .paw-toast[hidden]{display:none}
+
+    /* 댓글 내 버튼 */
+    .c-actions{display:flex;gap:8px;margin-top:6px}
+    .c-del{border:none;border-radius:8px;padding:6px 10px;background:#eee;cursor:pointer;font-size:12px}
+    .c-del:hover{background:#e2e2e2}
+    .pager{display:flex;justify-content:space-between;gap:8px;margin-top:10px}
+    .pager button{flex:1;border:none;border-radius:10px;padding:10px;background:#f1f1f1;cursor:pointer}
+    .pager button[disabled]{opacity:.5;cursor:not-allowed}
   </style>
 </head>
 <body>
@@ -110,7 +120,7 @@
     import { getProjectById } from './js/api.js';
     import { storage } from './js/firebase.js';
     import { ref, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-storage.js";
-    import { addComment, listenComments, ensureAuth } from "./js/comments.js"; /* 신규 모듈 */
+    import { addComment, deleteComment, listCommentsPage, ensureAuth, getUid } from "./js/comments.js"; /* 댓글 모듈 */
 
     injectLayout({ active:'project' });
     const $detail=document.getElementById('project-detail');
@@ -130,6 +140,20 @@
     function formatDescription(text){if(!text) return '';return String(text).replace(/\n/g,'<br/>');}
     const escapeHtml = (s)=>String(s??'').replace(/[&<>"']/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[m]));
 
+    function parseAnyDate(v){
+      if(!v) return null;
+      if(typeof v?.toDate==='function') return v.toDate();
+      if(typeof v==='object' && typeof v.seconds==='number') return new Date(v.seconds*1000);
+      if(typeof v==='number') return new Date(v>1e12?v: v*1000);
+      const d=new Date(v); return isNaN(d) ? null : d;
+    }
+    function getCreatedAt(p){
+      const k=['createdAt','created_at','createdDate','created','regDate','registeredAt'];
+      for(const key of k){ if(p[key]){ const d=parseAnyDate(p[key]); if(d) return d; } }
+      return null;
+    }
+    const fmtDate=(d)=>d?`${d.getFullYear()}.${String(d.getMonth()+1).padStart(2,'0')}.${String(d.getDate()).padStart(2,'0')}`:'';
+
     async function render(){
       const id=getId(); if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
       try{
@@ -137,8 +161,10 @@
         const imgs=await galleryHttpUrls(p);
         const goal=Number(p.goalAmount||0);
         const current=Number(p.currentAmount||0);
+        const created=parseAnyDate(getCreatedAt(p))||parseAnyDate(p?.createdAt);
+        const createdStr=fmtDate(created);
 
-        /* === 백틱 중첩 없는 안전 렌더 === */
+        /* === 안전 렌더 === */
         const nameSafe = p.name ?? '(이름 없음)';
 
         const carouselItems = imgs.map((url,i)=>
@@ -165,6 +191,7 @@
         $detail.innerHTML = `
           <section class="paw-head block headline">
             <h1 class="big-title">${nameSafe}</h1>
+            ${createdStr?`<div class="meta-date">등록일: ${createdStr}</div>`:''}
           </section>
           <div class="paw-grid">
             <!-- 좌측 -->
@@ -197,21 +224,25 @@
                 <p><strong>2025.09월</strong>을 시작으로 작은 용기들이 모여 큰 변화가 될 거라 믿습니다. 🐾</p>
               </section>
 
-              <!-- 응원 댓글 (맨 아래) -->
+              <!-- 구조자에게 감사인사 전하기 (맨 아래, 페이지네이션/본인삭제) -->
               <section class="section-card block comments">
-                <h2>응원하기 💬</h2>
-                <div style="display:flex; gap:8px; margin-bottom:10px;">
+                <h2>구조자에게 감사인사 전하기 💬</h2>
+                <div id="comment-list" style="margin-bottom:10px;"></div>
+                <div class="pager">
+                  <button id="prev-page" disabled>이전 5개</button>
+                  <button id="next-page" disabled>다음 5개</button>
+                </div>
+                <textarea id="comment-input" rows="3" style="width:100%;margin-top:12px;padding:10px;border:1px solid #ddd;border-radius:8px;" placeholder="감사 인사를 남겨주세요 (최대 500자)"></textarea>
+                <div style="display:flex;gap:8px;align-items:center;flex-wrap:wrap;margin-top:8px;">
                   <input id="comment-name" type="text" maxlength="30"
-                         placeholder="작성자명 (선택)" style="flex:0 0 200px;padding:10px;border:1px solid #ddd;border-radius:8px;">
-                  <button id="comment-saveName" style="padding:10px 12px;border:none;border-radius:8px;background:#6b7280;color:#fff;font-weight:700;">
+                         placeholder="작성자명 (선택)" style="width:180px;padding:8px;border:1px solid #ddd;border-radius:8px;font-size:14px;">
+                  <button id="comment-saveName" style="padding:8px 10px;border:none;border-radius:8px;background:#6b7280;color:#fff;font-weight:700;font-size:14px;">
                     이름 저장
                   </button>
+                  <button id="comment-btn" style="margin-left:auto;padding:10px 14px;border:none;border-radius:8px;background:#E87722;color:#fff;font-weight:700;">
+                    감사 인사 남기기
+                  </button>
                 </div>
-                <div id="comment-list" style="margin-bottom:15px;"></div>
-                <textarea id="comment-input" rows="3" style="width:100%;padding:10px;border:1px solid #ddd;border-radius:8px;" placeholder="응원의 한마디를 남겨주세요 (최대 500자)"></textarea>
-                <button id="comment-btn" style="margin-top:10px;width:100%;padding:10px;border:none;border-radius:8px;background:#E87722;color:#fff;font-weight:700;">
-                  응원 남기기
-                </button>
               </section>
             </div>
 
@@ -265,21 +296,27 @@
         function openModal(e){ if(e) e.preventDefault(); accEl.textContent=ACCOUNT_TEXT; modal.hidden=false; document.body.style.overflow='hidden'; }
         function closeModal(){ modal.hidden=true; document.body.style.overflow=''; }
         modal.addEventListener('click',(e)=>{ if(e.target.classList.contains('paw-modal')||e.target.classList.contains('paw-close')) closeModal();});
-        copyBtn.addEventListener('click', async ()=>{ try{ await navigator.clipboard.writeText(ACCOUNT_TEXT);}catch{
-          const ta=document.createElement('textarea'); ta.value=ACCOUNT_TEXT; document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove();
-        } toast.hidden=false; setTimeout(()=>toast.hidden=true,1200); });
+        copyBtn.addEventListener('click', async ()=>{
+          // 숫자만 복사
+          const digits = ACCOUNT_TEXT.replace(/\D/g,'');
+          try{ await navigator.clipboard.writeText(digits); }
+          catch{
+            const ta=document.createElement('textarea'); ta.value=digits;
+            document.body.appendChild(ta); ta.select(); document.execCommand('copy'); ta.remove();
+          }
+          toast.textContent='계좌번호(숫자만) 복사됨';
+          toast.hidden=false; setTimeout(()=>{toast.hidden=true; toast.textContent='복사되었습니다';},1200);
+        });
         document.querySelector('.btn-kakao')?.addEventListener('click',(e)=>{ e.preventDefault(); openModal(e); }, {passive:false});
 
-        /* ===== Firestore 응원댓글 ===== */
+        /* ===== Firestore 댓글: 페이지네이션 + 본인삭제 ===== */
         await ensureAuth();
+        const myUid = getUid();
 
         const NAME_KEY = 'pawDisplayName';
         const nameInput = document.getElementById("comment-name");
         const saveNameBtn = document.getElementById("comment-saveName");
-
-        // 저장된 이름 복원
         try { const saved = localStorage.getItem(NAME_KEY); if(saved) nameInput.value = saved; } catch {}
-
         saveNameBtn?.addEventListener("click", ()=>{
           const nm = (nameInput?.value||"").trim().slice(0,30);
           try { localStorage.setItem(NAME_KEY, nm); } catch {}
@@ -289,20 +326,70 @@
         const commentList = document.getElementById("comment-list");
         const commentInput = document.getElementById("comment-input");
         const commentBtn = document.getElementById("comment-btn");
+        const prevBtn = document.getElementById("prev-page");
+        const nextBtn = document.getElementById("next-page");
 
-        function renderComments(items){
-          if(!items.length){ commentList.innerHTML = '<div style="color:#777">첫 응원을 남겨주세요 🙌</div>'; return; }
+        const PAGE_SIZE = 5;
+        const cursors = [null]; // 각 페이지의 시작 cursor (null은 첫 페이지)
+        let pageIndex = 0;      // 현재 페이지 인덱스
+        let lastVisible = null; // 현재 페이지 마지막 문서 스냅샷
+
+        function renderItems(items){
+          if(!items.length){ commentList.innerHTML = '<div style="color:#777">아직 인사가 없습니다. 첫 인사를 남겨주세요 🙌</div>'; return; }
           commentList.innerHTML = items.map(c=>{
             const when = c.createdAt && c.createdAt.toDate ? c.createdAt.toDate() : null;
             const ts = when ? when.toLocaleString('ko-KR') : '';
             const who = c.name ? escapeHtml(c.name) : '익명';
-            return '<div style="padding:8px 0;border-bottom:1px solid #eee;">'
-                 +   '<div style="font-weight:700">'+who+'</div>'
+            const mine = c.uid && myUid && c.uid===myUid;
+            return '<div class="c-item" data-id="'+escapeHtml(c.id)+'" style="padding:10px 0;border-bottom:1px solid #eee;">'
+                 +   '<div style="display:flex;justify-content:space-between;gap:8px;align-items:center;">'
+                 +     '<div style="font-weight:700">'+who+'</div>'
+                 +     (mine?'<div class="c-actions"><button class="c-del">삭제</button></div>':'')
+                 +   '</div>'
                  +   '<div>'+escapeHtml(c.text||'')+'</div>'
-                 +   '<div style="color:#888;font-size:12px">'+ts+'</div>'
+                 +   '<div style="color:#888;font-size:12px;margin-top:2px">'+ts+'</div>'
                  + '</div>';
           }).join('');
         }
+
+        async function loadPage(idx){
+          pageIndex = idx;
+          const cursor = cursors[idx] || null;
+          const { items, lastDoc, hasMore } = await listCommentsPage(id, PAGE_SIZE, cursor);
+          lastVisible = lastDoc || null;
+          renderItems(items);
+          prevBtn.disabled = (idx===0);
+          nextBtn.disabled = !hasMore;
+        }
+
+        nextBtn.addEventListener('click', async ()=>{
+          if(nextBtn.disabled) return;
+          // 다음 페이지 시작 커서를 스택에 저장
+          if(lastVisible) cursors[pageIndex+1] = lastVisible;
+          await loadPage(pageIndex+1);
+        });
+
+        prevBtn.addEventListener('click', async ()=>{
+          if(prevBtn.disabled) return;
+          await loadPage(pageIndex-1);
+        });
+
+        commentList.addEventListener('click', async (e)=>{
+          const btn = e.target.closest('.c-del');
+          if(!btn) return;
+          const wrap = btn.closest('.c-item');
+          const cid = wrap?.dataset?.id;
+          if(!cid) return;
+          if(!confirm('이 인사를 삭제할까요?')) return;
+          await deleteComment(id, cid);
+          // 현재 페이지 재로딩 (비면 이전 페이지로)
+          const { items } = await listCommentsPage(id, PAGE_SIZE, cursors[pageIndex]||null);
+          if(items.length===0 && pageIndex>0){
+            await loadPage(pageIndex-1);
+          }else{
+            await loadPage(pageIndex);
+          }
+        });
 
         commentBtn?.addEventListener("click", async ()=>{
           const text = (commentInput?.value||"").trim();
@@ -312,9 +399,13 @@
           await addComment(id, text, nm || null);
           if(nm){ try { localStorage.setItem(NAME_KEY, nm); } catch {} }
           commentInput.value = "";
+          // 새로 작성하면 첫 페이지로 이동
+          cursors.splice(1); // 이후 커서 초기화
+          await loadPage(0);
         });
 
-        listenComments(id, renderComments);
+        // 첫 로드
+        await loadPage(0);
 
       }catch(e){
         console.error(e);
