--- a/project.html
+++ b/project.html
@@ -233,7 +233,7 @@
 
               <!-- 감사인사 전하기 (맨 아래, 페이지네이션/본인삭제) -->
               <section class="section-card block comments">
-                <h2>감사인사 전하기 💬</h2>
+                <h2>구조자에게 감사인사 전하기 💬</h2>
                 <div id="comment-list" style="margin-bottom:10px;"></div>
                 <div class="pager">
                   <button id="prev-page" disabled>이전 5개</button>
