--- a/index.html
+++ b/index.html
@@ -32,7 +32,15 @@
       color:var(--accent);padding-bottom:14px;border-bottom:1px solid var(--line)}
     .story-card h2{font-size:2.1rem;font-weight:900;margin:0 0 28px;line-height:1.45;color:var(--ink)}
     .story-card p{margin:10px 0;font-size:1.2rem;font-weight:800;line-height:1.85;color:#111}
-    .story-card .paw-words p{font-size:1.45rem;font-weight:900;line-height:1.7;margin:6px 0}
+    .story-card .paw-words p{
+      font-size:1.7rem;
+      font-weight:900;
+      line-height:1.8;
+      margin:6px 0;
+      font-family:'SUIT Variable','Pretendard','Inter',sans-serif;
+      -webkit-font-smoothing: antialiased;
+      text-rendering: geometricPrecision;
+    }
     .highlight{color:var(--accent)}
 
     /* Projects */
