--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
       text-rendering: geometricPrecision;
     }
     .highlight{color:var(--accent)}
-    .subnote{font-size:0.9rem;color:#999;margin-top:12px;font-weight:500;line-height:1.5}
+    .subnote{
+      font-size:0.85rem;   /* 본문 대비 2단계 작게 */
+      color:#999;          /* 옅은 회색 */
+      margin-top:12px;
+      font-weight:500;
+      line-height:1.5;
+    }
 
     /* Projects */
     .projects h2{margin:0;font-size:2rem;font-weight:900;color:var(--ink)}
