--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
       text-rendering: geometricPrecision;
     }
     .highlight{color:var(--accent)}
-    .subnote{
-      font-size:0.85rem;   /* 본문 대비 2단계 작게 */
-      color:#999;          /* 옅은 회색 */
-      margin-top:12px;
-      font-weight:500;
-      line-height:1.5;
+
+    /* Subnote */
+    .subnote {
+      font-size: 0.75rem;
+      color: #aaa;
+      margin-top: 10px;
+      font-weight: 400;
+      line-height: 1.4;
+      font-style: italic;
     }
 
     /* Projects */
