--- a/index.html
+++ b/index.html
@@ -75,6 +75,29 @@
     .stats{display:flex;justify-content:space-between;font-size:.95rem;color:var(--sub);margin-top:8px}
     .stats span strong{font-weight:800;color:var(--ink);margin-left:4px}
     .muted{color:#888}
+
+    /* === CTA Dock (copied from project_list.html) === */
+    .cta-dock{
+      position:fixed;
+      right:20px;
+      bottom:20px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      z-index:50;
+    }
+    .cta-dock a{
+      display:inline-block;
+      padding:10px 14px;
+      border-radius:10px;
+      font-weight:700;
+      font-size:.9rem;
+      text-decoration:none;
+      box-shadow:0 3px 8px rgba(0,0,0,0.12);
+    }
+    .btn-kakao{background:#FEE500;color:#111;}
+    .btn-insta{background:#E4405F;color:#fff;}
+    .btn-share{background:#6b7280;color:#fff;}
   </style>
 </head>
 <body>
@@ -127,6 +150,13 @@
 
   <div data-include="footer"></div>
 
+  <!-- === CTA Dock (same as project_list.html) === -->
+  <div class="cta-dock">
+    <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao" target="_blank" rel="noopener noreferrer">💬 단톡방</a>
+    <a href="https://www.instagram.com/projectpaw.kr/" class="btn-insta" target="_blank" rel="noopener noreferrer">📷 인스타그램</a>
+    <a href="#" class="btn-share">🔗 링크 복사</a>
+  </div>
+
   <script type="module">
     import { injectLayout } from './js/include.js';
     import { apiListProjects } from './js/api.js';
@@ -173,6 +203,15 @@
       }catch(e){console.error(e);$grid.innerHTML='<div class="muted">프로젝트를 불러오지 못했습니다.</div>';}
     }
     render();
+  </script>
+
+  <!-- 링크 복사 기능 (CTA Dock) -->
+  <script>
+    document.querySelector(".btn-share")?.addEventListener("click", (e) => {
+      e.preventDefault();
+      navigator.clipboard.writeText(window.location.href)
+        .then(() => alert("링크가 복사되었습니다."));
+    });
   </script>
 </body>
 </html>
