--- a/project.html
+++ b/project.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ko">
 <head>
@@ -59,7 +58,7 @@
     .paw-kv .v{margin-top:4px;font-weight:900}
     .paw-kv .v.big{font-size:1.4rem;color:var(--ink)}
 
-    /* 버튼 */
+    /* 버튼 (패널용 큰 버튼) */
     .btn-kakao{display:block;width:100%;background:#FEE500;color:#111;padding:14px 18px;
       border-radius:12px;font-weight:700;font-size:1.05rem;text-align:center;text-decoration:none;margin-top:10px}
     .btn-kakao:hover{background:#e5d200}
@@ -96,6 +95,30 @@
     .pager{display:flex;justify-content:space-between;gap:8px;margin-top:10px}
     .pager button{flex:1;border:none;border-radius:10px;padding:10px;background:#f1f1f1;cursor:pointer}
     .pager button[disabled]{opacity:.5;cursor:not-allowed}
+
+    /* ===== CTA Dock (FAB) ===== */
+    .cta-dock{
+      position:fixed;
+      right:20px;
+      bottom:20px;
+      display:flex;
+      flex-direction:column;
+      gap:10px;
+      z-index:50;
+    }
+    .cta-dock a{
+      display:inline-block;
+      padding:10px 14px;
+      border-radius:10px;
+      font-weight:700;
+      font-size:.9rem;
+      text-decoration:none;
+      box-shadow:0 3px 8px rgba(0,0,0,0.12);
+    }
+    .btn-insta{background:#E4405F;color:#fff;}
+    /* 패널용 .btn-kakao/.btn-share와 충돌 방지 오버라이드 */
+    .cta-dock .btn-kakao{background:#FEE500;color:#111; width:auto; padding:10px 14px; border-radius:10px; display:inline-block; font-size:.9rem; margin-top:0;}
+    .cta-dock .btn-share{background:#6b7280;color:#fff; width:auto; padding:10px 14px; border-radius:10px; display:inline-block; font-size:.9rem; margin-top:0;}
   </style>
 </head>
 <body>
@@ -104,6 +127,13 @@
     <div id="project-detail"><div class="muted">불러오는 중...</div></div>
   </main>
   <div data-include="footer"></div>
+
+  <!-- ✅ CTA Dock (project_list와 동일) -->
+  <div class="cta-dock">
+    <a href="https://open.kakao.com/o/go3sJ0Kh" class="btn-kakao" target="_blank" rel="noopener noreferrer">💬 단톡방</a>
+    <a href="https://www.instagram.com/projectpaw.kr/" class="btn-insta" target="_blank" rel="noopener noreferrer">📷 인스타그램</a>
+    <a href="#" class="btn-share" id="dockShare">🔗 링크 복사</a>
+  </div>
 
   <!-- 후원 계좌 모달 -->
   <div class="paw-modal" id="pawAccModal" hidden>
@@ -160,7 +190,7 @@
       for(const key of k){ if(p[key]){ const d=parseAnyDate(p[key]); if(d) return d; } }
       return null;
     }
-    const fmtDate=(d)=>d?`${d.getFullYear()}.${String(d.getMonth()+1).padStart(2,'0')}.${String(d.getDate()).padStart(2,'0')}`:'';
+    const fmtDate=(d)=>d?`${d.getFullYear()}.${String(d.getMonth()+1).padStart(2,'0')}.${String(d.getDate()).padStart(2,'0')}`:''; 
 
     async function render(){
       const id=getId(); if(!id){$detail.innerHTML='<div class="muted">잘못된 접근입니다.</div>';return;}
@@ -283,7 +313,7 @@
           </div>
         `;
 
-        // 공유 복사
+        // 공유 복사 (패널 버튼)
         document.getElementById("shareCopy")?.addEventListener("click",()=>{
           navigator.clipboard.writeText(window.location.href).then(()=>alert("링크가 복사되었습니다."));
         });
@@ -319,9 +349,10 @@
           toast.textContent='계좌번호(숫자만) 복사됨';
           toast.hidden=false; setTimeout(()=>{toast.hidden=true; toast.textContent='복사되었습니다';},1200);
         });
+        // 메인 "후원하러 가기" 버튼(패널용)
         document.querySelector('.btn-kakao')?.addEventListener('click',(e)=>{ e.preventDefault(); openModal(e); }, {passive:false});
 
-        // 프로젝트 번호가 있으면 팝업 안내 채우기
+        // 프로젝트 번호 안내(승인된 프로젝트만 노출)
         const guide = document.getElementById('pawAccGuide');
         if (guide) {
           if (p.projectNumber) {
@@ -433,6 +464,15 @@
     }
 
     render();
+  </script>
+
+  <!-- 링크 복사 기능 (CTA Dock) -->
+  <script>
+    document.getElementById("dockShare")?.addEventListener("click",(e)=>{
+      e.preventDefault();
+      navigator.clipboard.writeText(window.location.href)
+        .then(()=>alert("링크가 복사되었습니다."));
+    });
   </script>
 </body>
 </html>
